# task-manager

./: .gitignore  Makefile  README.md  build.sh  env_example  pyproject.toml  render.yaml
.github/workflows/: linter-check.yml
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: helpers.py  mixins.py  settings.py  tests.py  urls.py  views.py
task_manager/fixtures/: labels.json  tasks.json  test_status.json  test_task.json  test_user.json  test_users.json  users.json
task_manager/labels/: forms.py  models.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py  0002_label_created_at_label_name.py  0003_alter_label_options.py
task_manager/labels/tests/: test_form.py  test_model.py  test_post.py  test_view.py  testcase.py
task_manager/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/statuses/tests/: test_post.py  test_view.py  testcase.py
task_manager/task_manager/: settings.py
task_manager/tasks/: filters.py  forms.py  models.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_task_executor_alter_task_status.py  0002_tasklabelrelation_task_labels.py  0003_alter_task_executor.py  0003_alter_task_labels.py  0004_alter_task_status.py  0005_alter_task_status.py  0006_alter_task_options.py
task_manager/tasks/tests/: test_form.py  test_model.py  test_post.py  test_view.py  testcase.py
task_manager/templates/: 404.html  base.html  footer.html  form.html  index.html  navbar.html
task_manager/users/: 73575  admin.py  env_example  forms.py  models.py  settings.py  tests.py  urls.py  views.py
(+23 files in other folders)
