[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Task Manager based on Django"
authors = ["Sergey R <goodstop687@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
