[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Task Manager based on Django"
authors = ["Sergey R <goodstop687@gmail.com>"]
readme = "README.md"
packages = [{include="task_manager"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.7"
psycopg2-binary = "^2.9.9"
dj-database-url = "^2.2.0"
python-dotenv = "^1.0.1"
whitenoise = {extras = ["brotli"], version = "^6.7.0"}
gunicorn = "^22.0.0"
uvicorn = "^0.30.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
